# Graph-Discourse-Analysis-v2

./: PROJECT_LAYOUT.md  README.md  pyproject.toml  requirements.txt
current_pipeline/: FULL_PIPELINE_WALKTHROUGH.md  README.md  run_pipeline.py
data/stance_pipeline/: debate.txt
legacy/: Debate_old_numpy.ipynb  README.md  backend.py  prototype.ipynb
legacy/Stance_Det_Exp/: KIOULU.py  algo_visualizer.py  benchmark_syncialo.py  context_walks.py  graph_algorithms.py  graph_builder.py  main.py  mata_benchmark_syncialo.py  meta_features.npz  meta_lr.joblib  meta_nli.py  nli_relations.py  pretty_graph.html  similarity_graph.py  visualize.py
legacy/Stance_Det_Exp/out_graphs/: edges.tsv  nodes.tsv
legacy/Stance_Det_Exp/out_graphs_algo_viz/: node_link_data-debate-eval-0002_clusters.html  node_link_data-debate-eval-0002_clusters_themes.json  node_link_data-debate-eval-0002_mincut_all_clusters.json  node_link_data-debate-eval-0002_mincut_clusters.html  node_link_data-debate-eval-0002_pagerank_attack.html  node_link_data-debate-eval-0002_pagerank_net.html  node_link_data-debate-eval-0002_pagerank_support.html  node_link_data-debate-eval-0002_support_indegree.html
legacy/Stance_Det_Exp/out_graphs_analysis/: cluster_themes.json  clusters.json  pagerank_support.csv  support_indegree.csv  vulnerability_mincut.json
legacy/Stance_Det_Exp/out_graphs_viz/: node_link_data-debate-eval-0002_attack_only.html  node_link_data-debate-eval-0002_combined.html  node_link_data-debate-eval-0002_support_only.html
outputs/: README.md
src/btp_clean/: __init__.py  paths.py
(+157 files in other folders)
